CSS fixes for main page to work seamlessly on mobile

--- a/less/home.less
+++ b/less/home.less
@@ -5,9 +5,11 @@ body {
 
 .home-main-container {
     display:flex;
-    justify-content: center;
+    justify-content: top;
     flex-direction: column;
     min-width: 350px;
+    // height: 750px;
+    padding-bottom: 50px;
 
 }
 
@@ -25,7 +27,7 @@ body {
     justify-content: center;
     padding-left: 5%;
     padding-right: 5%;
-    padding-bottom: 70px;
+    // padding-bottom: 70px;
 }
 
 .what-do-I-do{
